--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,19 @@
     <string name="drawer_close">open</string>
     <string name="chapter">Select Chapters</string>
     <string name="org">Select Organization</string>
+
+    <!-- activity_main -->
     <string name="email">Email</string>
     <string name="password">Password</string>
+
+    <!-- activity_org -->
+    <string name="pin_label">4 digit pin</string>
+    <string name="choose_organization">Choose organization</string>
+    <string name="hint_login_user">Sign in With Different User?</string>
+    <string name="login">Login</string>
+
+    <!-- activity_pin_layout -->
+    <string name="enter_pin">Enter Pin</string>
+    <string name="confirm_pin">Confirm Pin</string>
+    <string name="generate_mpin">Generate mPin</string>
 </resources>
