--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
 
     <!-- Student_catalog -->
     <string name="load_more">Load more</string>
+
+    <!-- Activity_daily_teaching -->
+    <string name="create_daily_catalog">Create Daily Catalog</string>
+    <string name="select_date">Select Date</string>
+    <string name="today_date">Todays Date</string>
+    <string name="create">Create</string>
+    <string name="points">Points</string>
 </resources>
