--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="generate_mpin">Generate mPin</string>
 
     <!-- activity_class -->
-    <string name="no_data">No data available</string>
+    <string name="no_subject">No Subject</string>
+    <string name="no_daily_teaches">No Daily Teaches</string>
 
     <!-- Student_catalog -->
     <string name="load_more">Load more</string>
