--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="password">Password</string>
 
     <!-- activity_org -->
-    <string name="pin_label">4 digit pin</string>
+    <string name="pin_label">Enter 4 digit pin</string>
     <string name="choose_organization">Choose organization</string>
     <string name="hint_login_user">Sign in With Different User?</string>
     <string name="login">Login</string>
@@ -47,6 +47,4 @@
     <string name="standard">Standard</string>
     <string name="dailyid">dailyid</string>
     <string name="no_more_data_to_load">No more data to load</string>
-
-
 </resources>
